# temoa

./: .gitignore  .session  CHANGELOG.md  CLAUDE.md  FILTER-SYNTAX-REFERENCE.md  FILTER-TESTING-GUIDE.md  FILTERING-IMPLEMENTATION-PLAN.md  LICENSE  NOTE-FROM-ZEITGEIST.md  OBSIDIAN-FILTER-IMPLEMENTATION.md  PHASE1-IMPLEMENTATION-SUMMARY.md  README.md  config.example.json  config.vault-local.example.json  debug_stats.py  dev.sh  dev.sh.backup  pyproject.toml  setup-synthesis.sh  view-logs.sh  view-logs.sh.backup
docs/: ARCHITECTURE.md  CHRONICLES.md  COMPACT-VIEW-PLAN.md  CONTEXT.md  DECISIONS.md  DEPLOYMENT.md  DOCUMENTATION-CLEANUP-PLAN.md  DOCUMENTATION-GUIDE.md  GLEANING-NORMALIZATION-PLAN.md  GLEANING-STATUS.md  GLEANINGS-EVOLUTION.md  GLEANINGS.md  IMPLEMENTATION.md  INCREMENTAL-INDEXING-PLAN.md  KNOWLEDGE-ARCHAEOLOGY.md  MANAGEMENT-PAGE-PLAN.md  MIDCOURSE-2025-11-19.md  MULTI-MODEL-PLAN.md  OPUS-OPINES.md  PHASE-3-READY.md  PRODUCTION-HARDENING-ROADMAP.md  README.md  RESEARCH-NOTES.md  SEARCH-ARCHITECTURE-REVIEW.md  SEARCH-MECHANISMS.md  SEARCH-QUALITY-REVIEW.md  SYNTHESIS_PREFILTER_PLAN.md  TEMOA-ORIGINS.md  TEMOA.md  TESTING.md  TRACKING-SYSTEM.md  UI-CLEANUP-PLAN.md  UI-REVIEW.md  ZEITGEIST-INTEGRATION.md  phase0-results.md
launchd/: README.md  dev.sh  install.sh  temoa.plist.template  uninstall.sh  view-logs.sh
launchd.backup/: README.md
prototypes/: README.md  investigate_performance.py  setup_vault.py  test_synthesis_performance.py
scripts/: add_type_to_daily_notes.py  analyze_gleaning_formats.py  extract_and_reindex.sh  extract_gleanings.py  generate_pwa_icons.py  maintain_gleanings.py  migrate_old_gleanings.py  test_api.sh
synthesis/: CLAUDE.md  README.md  main.py  pyproject.toml
synthesis/doc/: MULTI_MODEL_SYSTEM.md  embeddings-decision.md
synthesis/doc/archive/: SYNTHESIS_IDEAS.md  processing-strategy-decision.md
synthesis/src/: config.py  temporal_archaeology.py
synthesis/src/embeddings/: __init__.py  models.py  pipeline.py  store.py  vault_reader.py
synthesis/src/visualizer/: graph_builder.py  simple_viz.py  visualizer.py
test-vault/: BM25_TAG_BOOSTING_RESULTS.md  FRONTMATTER_EXPERIMENT_RESULTS.md  run_baseline.sh  run_hybrid_test.sh  test_queries.json
tests/: test_chunking.py  test_config.py  test_edge_cases.py  test_gleanings.py  test_server.py  (+9 more)
(+169 files in other folders)
