[project]
name = "temoa"
version = "0.1.2"
description = "Local semantic search server for Obsidian vault"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "click>=8.0",
    # Synthesis dependencies (for direct imports)
    "sentence-transformers>=2.2.2",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "pyyaml>=6.0",
    "tqdm>=4.64.0",
    # Gleaning maintenance
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    # BM25 for hybrid search
    "rank-bm25>=0.2.2",
    # Frontmatter parsing for type filtering
    "python-frontmatter>=1.0.0",
]

[project.scripts]
temoa = "temoa.cli:main"

[tool.uv]
package = true

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",  # For testing FastAPI
    "black>=23.0.0",
    "mypy>=1.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
