[project]
name = "synthesis"
version = "0.1.0"
description = "Synthesis Project - tools for creating meaning and insights from vault data"
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers>=2.2.2",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "pyyaml>=6.0",
    "tqdm>=4.64.0",
    "nahuatl-frontmatter",
]

[tool.uv.sources]
nahuatl-frontmatter = { path = "../../nahuatl-frontmatter" }

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]